# nano-code-agent

./: .env  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  agent.py  agent_teams.py  background_tasks.py  calculator.py  config.py  context_compact.py  main.py  pyproject.toml  requirements.txt  skill_loader.py  subagent.py  task_system.py  todo.py  tools.py  worktree_manager.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: task_demo.py
route_agent/: __init__.py
route_agent/api/: __init__.py  server.py
route_agent/core/: __init__.py  agent.py  config.py  tools.py
route_agent/memory/: __init__.py
route_agent/tools/: __init__.py
route_agent/utils/: __init__.py
skills/python-debug/: SKILL.md
specs/001-project-refactor-github/: spec.md
specs/001-project-refactor-github/checklists/: requirements.md
tests/integration/: test_api.py
tests/unit/: test_agent.py  test_config.py  test_tools.py
